--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,7 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/bulma/css/bulma.min.css",
+              "node_modules/bulma/css/bulma.css",
               "src/styles.scss"
             ],
             "scripts": []
