--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,9 @@
     "@angular/animations": "~7.1.0",
     "@angular/common": "~7.1.0",
     "@angular/compiler": "~7.1.0",
-    "@angular/core": "~7.1.0",
+    "@angular/core": "^7.1.4",
     "@angular/forms": "~7.1.0",
-    "@angular/platform-browser": "~7.1.0",
+    "@angular/platform-browser": "file:node_modules/@angular/platform-browser",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
     "bulma": "^0.7.4",
