--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@angular/common": "^7.2.14",
+    "@angular/core": "^7.2.14",
+    "@angular/platform-browser": "^7.2.14",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "mongoose": "^5.5.5",
     "morgan": "~1.9.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.0"
   }
 }
