--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "mongoose": "^5.5.5",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "rxjs": "^6.5.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.0"
