--- a/client/package.json
+++ b/client/package.json
@@ -16,8 +16,8 @@
     "@angular/compiler": "~7.1.0",
     "@angular/core": "^7.1.4",
     "@angular/forms": "~7.1.0",
-    "@angular/platform-browser": "file:node_modules/@angular/platform-browser",
-    "@angular/platform-browser-dynamic": "~7.1.0",
+    "@angular/platform-browser": "^7.2.15",
+    "@angular/platform-browser-dynamic": "^7.2.15",
     "@angular/router": "~7.1.0",
     "bulma": "^0.7.4",
     "core-js": "^2.5.4",
