--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -12,7 +12,6 @@
     "importHelpers": true,
     "target": "es5",
     "typeRoots": ["node_modules/@types"],
-    "lib": ["es2018", "dom"],
-    "paths": { "@angular/*": ["node_modules/@angular/*"] }
+    "lib": ["es2018", "dom"]
   }
 }
