--- a/client/package.json
+++ b/client/package.json
@@ -16,9 +16,11 @@
     "@angular/compiler": "~7.1.0",
     "@angular/core": "^7.1.4",
     "@angular/forms": "~7.1.0",
+    "@angular/http": "^7.2.15",
     "@angular/platform-browser": "^7.2.15",
     "@angular/platform-browser-dynamic": "^7.2.15",
     "@angular/router": "~7.1.0",
+    "angular2-flash-messages": "^3.0.1",
     "bulma": "^0.7.4",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
@@ -26,7 +28,7 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.8",
+    "@angular-devkit/build-angular": "^0.13.9",
     "@angular/cli": "~7.1.0",
     "@angular/compiler-cli": "^7.2.12",
     "@angular/language-service": "~7.1.0",
