--- a/client/package.json
+++ b/client/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-browser-dynamic": "^7.2.15",
     "@angular/router": "~7.1.0",
     "angular2-flash-messages": "^3.0.1",
+    "angular2-jwt": "^0.2.3",
     "bulma": "^0.7.4",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
+    "rxjs-compat": "^6.5.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
